<resources>
    <string name="app_name">乐兑</string>
    <!--登录 start-->
    <string name="login_name_hint">请输入账号</string>
    <string name="login_psw_hint">请输入密码</string>
    <string name="login_bt_hint">登入</string>
    <string name="regist_fast_hint">快速注册</string>
    <string name="forget_psw_hint">忘记登录密码</string>
    <!--登录 end-->
    <!--注册 start-->
    <string name="regist_phone_hint">手机号码</string>
    <string name="regist_psw_hint">登入密码</string>
    <string name="regist_nickname_hint">昵称</string>
    <string name="regist_invitation_hint">邀请码</string>
    <string name="regist_bt_hint">提交注册</string>
    <!--注册 end-->
    <!--忘记密码 start-->
    <string name="apply_hint">提交申请</string>
    <string name="back_hint">返回登入</string>
    <!--忘记密码 end-->
    <!--修改密码 start-->
    <string name="change_psw_label">修改密码</string>
    <string name="old_psw_hint">原密码</string>
    <string name="new_psw_hint">新密码</string>
    <!--修改密码 end-->
    <!--个人中心 start-->
    <string name="user_level_hint">会员等级</string>
    <string name="user_change_hint">兑换币</string>
    <string name="user_gold_hint">金币</string>
    <string name="user_diamond_hint">钻石</string>
    <string name="user_my_hint">我的推广</string>
    <string name="user_my_shop_hint">获得的商品</string>
    <string name="user_my_record_hint">发布记录</string>
    <string name="user_my_real_hint">实名认证</string>
    <string name="user_my_info_hint">个人资料</string>
    <string name="user_my_address_hint">我的地址</string>
    <string name="user_about_us_hint">联系我们</string>
    <string name="user_my_version_hint">版本更新</string>
    <string name="exit_account_hint">退出登入</string>

    <string name="info_photo_hint">头像</string>
    <string name="info_nick_hint">昵称</string>
    <string name="info_phone_hint">手机号</string>
    <string name="info_lasttime_hint">上次登入时间</string>
    <string name="info_registtime_hint">注册时间</string>

    <string name="change_nick_hint">修改昵称</string>
    <string name="input_nick_hint">请输入昵称</string>
    <string name="change_phone_hint">修改手机号</string>


    <string name="campaign_person_hint">推广人数</string>
    <string name="campaign_reward_hint">总奖励</string>

    <string name="add_address_hint">新增收货地址</string>
    <string name="add_address">新建地址</string>
    <string name="add_address_label">添加地址</string>
    <string name="address_person_hint">收货人</string>
    <string name="address_phone_hint">手机号</string>
    <string name="address_area_hint">地区</string>
    <string name="address_city_hint">城市</string>
    <string name="address_contry_hint">区县</string>
    <string name="address_info_hint">详细地址</string>

    <string name="verify_name_hint">姓名</string>
    <string name="verify_id_hint">身份证号</string>
    <string name="verify_id_font_hint">点击上传身份证正面照片</string>
    <string name="verify_id_back_hint">点击上传身份证反面照片</string>
    <string name="verify_info_hint">描述</string>
    <string name="verify_take_hint">身份证拍照</string>

    <string name="notice_hint">信息公告</string>
    <string name="issue_photo">发布照片墙</string>
    <string name="issue_message">发布交易物品</string>


    <!--个人中心 end-->
    <!--任务 start-->
    <string name="get_task_hint">领取任务</string>
    <!--任务 end-->
    <!--商城 start-->
    <string name="shop_sift_hint">筛选</string>
    <string name="shop_redeem_hint">立即兑换</string>
    <string name="redeem_ok_hint">确认兑换</string>
    <string name="redeem_info">商品详情</string>
    <!--商城 end-->
    <!--展示墙 start-->
    <string name="show_issue_hint">发布</string>
    <string name="show_shop_hint">发布商品</string>
    <string name="show_shop_des">描述文字</string>
    <string name="show_shop_please_edit">请输入描述文字</string>
    <!--展示墙 end-->
    <!--首页 start-->
    <string name="home_game_hint">游戏规则</string>
    <string name="game_rule_hint">规则描述</string>
    <string name="game_one_hint">九宫格</string>
    <string name="game_two_hint">挖钻机</string>
    <string name="game_speed_hint">加速</string>
    <!--首页 end-->
    <!--通用 start-->
    <string name="copy_hint">复制</string>
    <string name="commit_bt_hint">提交</string>
    <string name="delete_bt_hint">删除</string>
    <string name="edit_bt_hint">编辑</string>
    <string name="init_bt_hint">设为默认</string>
    <string name="init_hint">默认</string>
    <string name="save_hint">保存</string>
    <string name="update_hint">更新</string>
    <string name="ok_bt_hint">确认</string>
    <!--通用 end-->
</resources>