<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/frame_four_distance">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_logo_46"
            android:drawablePadding="@dimen/frame_four_distance"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/frame_text_small_size"
            android:text="@string/shop_sift_hint"
            android:padding="@dimen/frame_four_distance"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choice_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/frame_text_small_size"
            android:padding="@dimen/frame_four_distance"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:drawableEnd="@drawable/ic_down"
            android:hint="@string/address_area_hint"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choice_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/frame_text_small_size"
            android:padding="@dimen/frame_four_distance"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:drawableEnd="@drawable/ic_down"
            android:hint="@string/address_city_hint"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choice_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/frame_text_small_size"
            android:padding="@dimen/frame_four_distance"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:drawableEnd="@drawable/ic_down"
            android:hint="@string/address_contry_hint"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <include layout="@layout/alen_progress_layout"/>
    <allen.frame.widget.MaterialRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </allen.frame.widget.MaterialRefreshLayout>
</androidx.appcompat.widget.LinearLayoutCompat>