<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:padding="@dimen/frame_32_distance"
        android:background="@mipmap/ic_logo_1">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_margin="@dimen/frame_32_distance"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingStart="@dimen/frame_32_distance"
        android:paddingEnd="@dimen/frame_32_distance"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/frame_eight_distance"
            android:drawablePadding="@dimen/frame_eight_distance"
            android:gravity="center_vertical"
            android:hint="@string/login_name_hint"
            android:drawableStart="@mipmap/ic_logo_16"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_normal_size"
            android:background="@drawable/input_bg"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/frame_eight_distance"
            android:drawablePadding="@dimen/frame_eight_distance"
            android:gravity="center_vertical"
            android:hint="@string/login_psw_hint"
            android:drawableStart="@mipmap/ic_logo_17"
            android:textColor="@color/text_black_color"
            android:inputType="textPassword"
            android:textSize="@dimen/frame_text_normal_size"
            android:layout_marginTop="@dimen/frame_edge_distance"
            android:background="@drawable/input_bg"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/frame_text_middle_size"
            android:textColor="@color/text_white_color"
            android:gravity="center"
            android:text="@string/login_bt_hint"
            android:padding="@dimen/frame_eight_distance"
            android:layout_marginTop="@dimen/frame_eight_distance"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regist_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/frame_text_middle_size"
            android:textColor="@color/text_white_color"
            android:gravity="center"
            android:text="@string/regist_fast_hint"
            android:padding="@dimen/frame_eight_distance"
            android:layout_marginTop="@dimen/frame_eight_distance"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/frame_eight_distance"
            android:text="@string/forget_psw_hint"
            android:textColor="@color/text_red_color"
            android:textSize="@dimen/frame_text_small_size"
            android:layout_marginTop="@dimen/frame_eight_distance"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_logo_9"/>
</androidx.appcompat.widget.LinearLayoutCompat>