<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="1dp"
        android:layout_marginStart="@dimen/frame_eight_distance"
        android:layout_marginTop="@dimen/frame_eight_distance"
        android:layout_marginEnd="@dimen/frame_eight_distance"
        android:layout_marginBottom="@dimen/frame_two_distance"
        app:cardCornerRadius="@dimen/frame_four_distance"
        app:contentPadding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/verify_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_small_size"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:hint="@string/verify_name_hint"
            android:padding="@dimen/frame_eight_distance"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="1dp"
        android:layout_marginStart="@dimen/frame_eight_distance"
        android:layout_marginTop="@dimen/frame_two_distance"
        android:layout_marginEnd="@dimen/frame_eight_distance"
        android:layout_marginBottom="@dimen/frame_eight_distance"
        app:cardCornerRadius="@dimen/frame_four_distance"
        app:contentPadding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/verify_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_small_size"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:hint="@string/verify_id_hint"
            android:padding="@dimen/frame_eight_distance"
            android:inputType="text"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/frame_four_distance">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/balck_transparent">
                <cn.allen.ems.widget.IDView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_logo_30"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="@dimen/frame_four_distance"
                    android:layout_marginEnd="@dimen/frame_four_distance"
                    android:layout_centerInParent="true"/>
                <cn.allen.ems.widget.IDView
                    android:id="@+id/verify_id_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/frame_eight_distance"
                    android:layout_marginEnd="@dimen/frame_eight_distance"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_smaller_size"
                android:textColor="@color/text_gray_color"
                android:text="@string/verify_id_font_hint"
                android:padding="@dimen/frame_eight_distance"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/frame_four_distance">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/balck_transparent">
                <cn.allen.ems.widget.IDView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_logo_31"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="@dimen/frame_four_distance"
                    android:layout_marginEnd="@dimen/frame_four_distance"
                    android:layout_centerInParent="true"/>
                <cn.allen.ems.widget.IDView
                    android:id="@+id/verify_id_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/frame_eight_distance"
                    android:layout_marginEnd="@dimen/frame_eight_distance"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_smaller_size"
                android:textColor="@color/text_gray_color"
                android:text="@string/verify_id_back_hint"
                android:padding="@dimen/frame_eight_distance"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/verify_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/frame_text_small_size"
        android:hint="@string/verify_info_hint"
        android:padding="@dimen/frame_eight_distance"
        android:layout_margin="@dimen/frame_eight_distance"
        android:background="@android:color/transparent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/frame_text_normal_size"
        android:textColor="@color/text_white_color"
        android:background="@drawable/dark_bt_bg"
        android:layout_margin="@dimen/frame_32_distance"
        android:padding="@dimen/frame_eight_distance"
        android:gravity="center"
        android:text="@string/commit_bt_hint"/>

</androidx.appcompat.widget.LinearLayoutCompat>