<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/text_white_color"
            android:padding="@dimen/frame_eight_distance">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_person_hint"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_phone_hint"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:inputType="phone"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_area_hint"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:drawablePadding="@dimen/frame_eight_distance"
                    android:drawableEnd="@drawable/ic_logo_55"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_city_hint"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:drawablePadding="@dimen/frame_eight_distance"
                    android:drawableEnd="@drawable/ic_logo_55"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_contry_hint"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/address_contry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:drawablePadding="@dimen/frame_eight_distance"
                    android:drawableEnd="@drawable/ic_logo_55"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:text="@string/address_info_hint"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/frame_text_small_size"
                    android:textColor="@color/text_black_color"
                    android:gravity="end|center_vertical"
                    android:padding="@dimen/frame_eight_distance"
                    android:background="@android:color/transparent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_line_color"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/frame_eight_distance">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_small_size"
                android:textColor="@color/text_black_color"
                android:text="@string/init_bt_hint"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/address_isinit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_red_color"
        android:textColor="@color/text_white_color"
        android:textSize="@dimen/frame_text_normal_size"
        android:gravity="center"
        android:padding="@dimen/frame_edge_distance"
        android:text="@string/save_hint"/>
</androidx.appcompat.widget.LinearLayoutCompat>