<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show.IssueMessageActivity">
    <include layout="@layout/alen_toolbar_layout"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/frame_edge_distance"
        android:text="@string/show_shop_des"
        android:textSize="@dimen/frame_text_normal_size"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/issue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/frame_edge_distance"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="@dimen/frame_two_distance">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/frame_100_distance"
            android:padding="@dimen/frame_four_distance"
            android:gravity="top"
            android:hint="@string/show_shop_please_edit"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_normal_size"
            android:layout_marginTop="@dimen/frame_edge_distance"
            android:layout_margin="@dimen/frame_eight_distance"
            android:background="@color/transparent"
            />
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/frame_edge_distance">
        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/frame_165_distance"
            android:layout_height="@dimen/frame_165_distance"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_logo_14"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/frame_text_normal_size"
            android:textColor="@color/text_gray_color"
            android:padding="@dimen/frame_eight_distance"
            android:text="上传图片"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_marginLeft="@dimen/frame_edge_distance"
        android:layout_marginRight="@dimen/frame_edge_distance"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/regist_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/frame_text_middle_size"
        android:textColor="@color/text_white_color"
        android:gravity="center"
        android:text="@string/commit_bt_hint"
        android:layout_marginLeft="@dimen/frame_edge_distance"
        android:layout_marginRight="@dimen/frame_edge_distance"
        android:padding="@dimen/frame_eight_distance"
        android:layout_marginTop="@dimen/frame_eight_distance"
        android:background="@drawable/dark_bt_bg"/>

</androidx.appcompat.widget.LinearLayoutCompat>